# CirculAn

./: .gitignore  E1_D4.tex  README.md  circular_genome_map_publication.py  create_fasta.py  create_functional_table.py  generate_scientific_figure.py  genome_features_pipeline.py  main.py  plot_nature_figure.py  pyproject.toml  render_table.py  wrapper.tex
